--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,3 +12,19 @@
   pointer-events: none;
   opacity: 0.5;
  }
+
+ main a.con-button.no-event.done {
+  display: flex;
+  align-items: center;
+  gap: 4px;
+ }
+
+ main a.con-button.no-event.done::before {
+  border-radius: 24px;
+  padding: 0 7px;
+  display: inline-block;
+  content: '✔';
+  font-size: 8px;
+  color: var(--color-accent);
+  background: var(--color-white);
+}
